--- a/package.json
+++ b/package.json
@@ -4,18 +4,25 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "wdio": "wdio run ./wdio.conf.js"
+    "wdio": "wdio run ./wdio.conf.js",
+    "format": "prettier --write ."
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "@cucumber/cucumber": "^10.9.0",
+    "@eslint/js": "^9.33.0",
     "@wdio/cli": "^9.19.1",
     "@wdio/cucumber-framework": "^9.19.1",
     "@wdio/local-runner": "^9.19.1",
-    "@wdio/spec-reporter": "^9.19.1"
+    "@wdio/spec-reporter": "^9.19.1",
+    "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
+    "globals": "^16.3.0",
+    "prettier": "^3.6.2"
   },
   "dependencies": {
     "reflect-metadata": "^0.2.2"
